<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvSkip">Пропустить</string>
    <string name="get_started">Начать</string>
    <string name="note">Заметки</string>
    <string name="note_creation_hint">Удобство</string>
    <string name="note_creation_hint2">Создавайте заметки в два клика! Записывайте мысли, идеи и важные задачи мгновенно.</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="all_notes">Все заметки</string>
    <string name="search">Поиск заметок</string>
    <string name="plus">+</string>
</resources>