<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    android:paddingTop="48dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".ui.fragment.on_board.OnBoardPagingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notes"
        android:textSize="36sp"
        android:layout_marginBottom="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            tools:ignore="MissingConstraints" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_onboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_creation_hint"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:layout_marginTop="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_onboard_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/note_creation_hint2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/get_started"
        android:textColor="#FFFFFF"
        android:backgroundTint="#D88B02"
        android:textSize="22sp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>